# agentfolio

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  ARCHITECTURE-agentfolio-verified-2026-04-23.md  ARCHITECTURE.md  AUDIT-FEB16.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN-BRIEF-V2.md  DISCORD_SETUP.md  DISTRIBUTION-PLAN.md  DISTRIBUTION.md  INTEGRATION_TEST_REPORT.md  MONETIZATION-ROADMAP.md  OUTREACH-LIST.md  OUTREACH-LOG.md  OUTREACH.md  PUBLIC_URL.txt  QA-REPORT.md  README.md  RESEARCH.md  ROADMAP-V2.md  ROADMAP.md  TASK-STATUS.md  TEST-REPORT.md  WORKQUEUE.md  add-endpoints.js  backfill-activity.py  backfill-v3-verifications.js  batch-genesis.js  ecosystem.config.js  fix-discriminator.js  fix-qa-bugs.js.done  fix-verification-gaps.js  fix_scoring.patch  import-backfill-to-db.js  package-lock.json  package.json  progress.txt  (+16 more)
.backup-v2-sdk/: escrow-v3-routes.js  onchain-reviews.js  profile-store.js  satp-api.js  satp-auto-identity.js  satp-identity-client.js  satp-write-client.js  sync-v3.js
archive/: boa-mint.js.bak  boa-mint.js.bak-202603141715  boa-mint.js.bak-bug1fix  boa-mint.js.bak-scoring-unify  boa-mint.js.bak2
archived/: agent_braintest_1774318407628.json
backup-bak-files/: boa-mint-nft.mjs.bak  boa-nft-minter.mjs.bak2  burn-to-become-public.js.bak.20260326_160638  burn-to-become-public.js.bak2  marketplace.js.bak  profile-store.js.bak  server.js.bak  server.js.bak.1772881737  trust-credential.js.bak  trust-credential.js.bak.1774419021618
onchain/escrow_v3/programs/escrow_v3/: Cargo.toml
onchain/escrow_v3/programs/escrow_v3/src/: lib.rs
(+1126 files in other folders)
