[package]
name = "escrow_v3"
version = "0.1.0"
description = "AgentFolio SATP V3 devnet escrow source pin"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_v3"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
